[tool.poetry]
name = "s3-radar"
version = "0.1.0"
description = ""
authors = ["Ilya Kochankov <ilyakochankov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.12.3"}
boto3 = "^1.34.104"
mimesis = "^16.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
