[tool.poetry]
name = "s3-radar"
version = "0.1.1"
description = ""
authors = ["Ilya Kochankov <ilyakochankov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.12.3"}
boto3 = "^1.34.104"
mimesis = "^16.0.0"
tqdm = "^4.66.4"

[tool.poetry.scripts]
smithy = 's3_radar.__main__:app'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
