[tool.poetry]
name = "s3-radar"
version = "0.1.5"
description = ""
authors = ["Ilya Kochankov <ilyakochankov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.3"}
boto3 = "^1.34.104"
tqdm = "^4.66.4"

[tool.poetry.scripts]
s3r = 's3_radar.__main__:app'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
